Project updated using statemachine, active object, and gpio rgb led.

--- a/freertos_hello_upgraded/CMakeLists.txt
+++ b/freertos_hello_upgraded/CMakeLists.txt
@@ -27,13 +27,13 @@ set(EXECUTABLE_OUTPUT_PATH ${ProjDirPath}/${CMAKE_BUILD_TYPE})
 set(LIBRARY_OUTPUT_PATH ${ProjDirPath}/${CMAKE_BUILD_TYPE})
 
 
-project(gpio_led_output)
+project(freertos_hello_upgraded)
 
 enable_language(ASM)
 
 set(MCUX_BUILD_TYPES debug release)
 
-set(MCUX_SDK_PROJECT_NAME gpio_led_output.elf)
+set(MCUX_SDK_PROJECT_NAME freertos_hello_upgraded.elf)
 
 if (NOT DEFINED SdkRootDirPath)
 SET(SdkRootDirPath ${ProjDirPath}/)
@@ -52,8 +52,14 @@ add_executable(${MCUX_SDK_PROJECT_NAME}
 "${ProjDirPath}/board/hardware_init.c"
 "${ProjDirPath}/board/pin_mux.c"
 "${ProjDirPath}/board/pin_mux.h"
-"${ProjDirPath}/source/gpio_led_output.c"
+"${ProjDirPath}/source/FreeRTOSConfig_Gen.h"
 "${ProjDirPath}/source/mcux_config.h"
+"${ProjDirPath}/source/src/main.c"
+"${ProjDirPath}/source/inc/main.h"
+"${ProjDirPath}/source/src/mainTasks.c"
+"${ProjDirPath}/source/inc/mainTasks.h"
+"${ProjDirPath}/source/src/statemachine_AB.c"
+"${ProjDirPath}/source/inc/statemachine_AB.h"
 )
 
 target_include_directories(${MCUX_SDK_PROJECT_NAME} PRIVATE
@@ -61,6 +67,7 @@ ${ProjDirPath}/source
 ${ProjDirPath}/board
 )
 
+set_source_files_properties("${ProjDirPath}/source/FreeRTOSConfig_Gen.h" PROPERTIES COMPONENT_CONFIG_FILE "middleware_freertos-kernel_config")
 
 include(${ProjDirPath}/all_lib_device.cmake)
 
@@ -75,9 +82,9 @@ target_link_libraries(${MCUX_SDK_PROJECT_NAME} PRIVATE ${TARGET_LINK_SYSTEM_LIBR
 TARGET_LINK_LIBRARIES(${MCUX_SDK_PROJECT_NAME} PRIVATE -Wl,--end-group)
 
 ADD_CUSTOM_COMMAND(TARGET ${MCUX_SDK_PROJECT_NAME} POST_BUILD COMMAND ${CMAKE_OBJCOPY}
--Obinary ${EXECUTABLE_OUTPUT_PATH}/${MCUX_SDK_PROJECT_NAME} ${EXECUTABLE_OUTPUT_PATH}/gpio_led_output.bin)
+-Obinary ${EXECUTABLE_OUTPUT_PATH}/${MCUX_SDK_PROJECT_NAME} ${EXECUTABLE_OUTPUT_PATH}/freertos_hello.bin)
 
-set_target_properties(${MCUX_SDK_PROJECT_NAME} PROPERTIES ADDITIONAL_CLEAN_FILES "output.map;${EXECUTABLE_OUTPUT_PATH}/gpio_led_output.bin")
+set_target_properties(${MCUX_SDK_PROJECT_NAME} PROPERTIES ADDITIONAL_CLEAN_FILES "output.map;${EXECUTABLE_OUTPUT_PATH}/freertos_hello.bin")
 
 # wrap all libraries with -Wl,--start-group -Wl,--end-group to prevent link order issue
 group_link_libraries()
